# MilandrBase

./: .cproject  .gitignore  .project  CMakeLists.txt  MDR1986VE92.svd  MilandrBase.jflash  README.md  start_debug.sh
Core/: 1986ve92.ld
Core/inc/: FreeRTOSConfig.h  IICMasterTask.hpp  IICSlaveTask.hpp  MDR32F9Qx_config.h  SSPDmaTask.hpp  SSPIrqTask.hpp  SSPPollTask.hpp  SSPSlaveTask.hpp  app_config.h  errors.h  log_levels.h  main_app.hpp  main_app_extern.h  ring_buffer.h  select_size.h  system_MDR32F9Qx.h  version.h
Core/src/: IICMasterTask.cpp  IICSlaveTask.cpp  SSPDmaTask.cpp  SSPIrqTask.cpp  SSPPollTask.cpp  SSPSlaveTask.cpp  errors.cpp  main.cpp  main_app.cpp
Drivers/CMSIS/MDR32Fx/CoreSupport/CM3/: bitbanding.h  cmsis_device.h  cmsis_gcc.h
Drivers/CMSIS/MDR32Fx/DeviceSupport/MDR1986VE9x/inc/: MDR32Fx.h
Drivers/SPL/inc/: MDR32F9Qx_adc.h  MDR32F9Qx_bkp.h  MDR32F9Qx_comp.h  MDR32F9Qx_dac.h  MDR32F9Qx_dma.h  MDR32F9Qx_eeprom.h  MDR32F9Qx_i2c.h  MDR32F9Qx_iwdg.h  MDR32F9Qx_port.h  MDR32F9Qx_power.h  MDR32F9Qx_rst_clk.h  MDR32F9Qx_ssp.h  MDR32F9Qx_timer.h  MDR32F9Qx_uart.h  MDR32F9Qx_usb.h  MDR32F9Qx_wwdg.h
Drivers/SPL/inc/USB_Library/: MDR32F9Qx_usb_HID.h  MDR32F9Qx_usb_def.h  MDR32F9Qx_usb_default_handlers.h  MDR32F9Qx_usb_device.h  MDR32F9Qx_usb_handlers.h
Drivers/SPL/src/: MDR32F9Qx_adc.c  MDR32F9Qx_bkp.c  MDR32F9Qx_comp.c  MDR32F9Qx_dac.c  MDR32F9Qx_dma.c  MDR32F9Qx_eeprom.c  MDR32F9Qx_eeprom_cache.S  MDR32F9Qx_i2c.c  MDR32F9Qx_iwdg.c  MDR32F9Qx_port.c  MDR32F9Qx_power.c  MDR32F9Qx_rst_clk.c  MDR32F9Qx_ssp.c  MDR32F9Qx_timer.c  MDR32F9Qx_uart.c  MDR32F9Qx_usb.c  MDR32F9Qx_wwdg.c
Drivers/SPL/src/USB_Library/: MDR32F9Qx_usb_HID.c  MDR32F9Qx_usb_device.c
FLM/: 1986VE9x_FlashInt.FLM  1986VE9x_FlashInt_DR.FLM  JLinkDevices.xml
Host/: .gitignore  CMakeLists.txt  FtdiI2C.cpp  FtdiSpi.cpp  LFSmart.cpp  README.md  common.cpp  iicread.cpp  iicreset.cpp  iicwrite.cpp  whoiam.cpp
Host/include/: FtdiI2C.h  FtdiSpi.h  LFSmart.h  commands.h  common.h
Host/tests/: CMakeLists.txt  registers_unittest.cc
Middlewares/FreeRTOS/Source/portable/GCC/ARM_CM3/: exception_handlers.c  initialize_hardware.c  reset_hardware.c  vectors.c
Middlewares/SEGGER/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
Middlewares/iicslave/: iicslave.cpp  iicslave.h
Middlewares/logging/: compiler.h  log.cpp  log_buffers.cpp  log_freertos.cpp  mdr_log_private.h
Middlewares/logging/include/: mdr_log.h  mdr_log_internal.h
Tools/: append_crc.py  lists.py  requirements.txt
cmake/: functions.cmake  toolchain-arm-none-eabi.cmake
